RESOLVED FIXED278463
Occasional debug assertion in '-[WKDOMRange _initWithlmpl:]' when editing content in Mail
https://bugs.webkit.org/show_bug.cgi?id=278463
Summary Occasional debug assertion in '-[WKDOMRange _initWithlmpl:]' when editing con...
Richard Robinson
Reported 2024-08-21 08:49:41 PDT
Attachments
Richard Robinson
Comment 1 2024-08-21 08:54:15 PDT
EWS
Comment 2 2024-08-21 11:14:42 PDT
Committed 282569@main (5a1b7be9c6cf): <https://commits.webkit.org/282569@main> Reviewed commits have been landed. Closing PR #32524 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.