Occasional debug assertion in '-[WKDOMRange _initWithlmpl:]' when editing content in Mail https://bugs.webkit.org/show_bug.cgi?id=278463 rdar://134421859

Reviewed by Aditya Keerthi.

Currently, in `WKWebProcessPlugInBrowserContextController::Client::shouldChangeSelectedRange`, if
either `fromRange` or `toRange` are empty, a debug assertion will happen in `HashTable::add`, since
`-[WKDOMRange _initWithlmpl:]` tries to add this range as a key to a HashTable, and nil keys aren't
allowed.

Fix by avoiding this from ever happening by checking if either are empty, and returning early in
this case.

* Source/WebKit/WebProcess/InjectedBundle/API/mac/WKWebProcessPlugInBrowserContextController.mm:
(-[WKWebProcessPlugInBrowserContextController _setEditingDelegate:]):

Canonical link: https://commits.webkit.org/282569@main